<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context="com.caykeprudente.meau.Fragments.LegislacaoFragment">

    <ScrollView
        android:id="@+id/sc_animal_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/termo_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legisla1"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:textSize="16dp"
                android:textColor="#434343"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legisla2"
                android:layout_marginBottom="16dp"
                android:textSize="12dp"
                android:textColor="#589b9b"
                android:fontFamily="sans-serif"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legisla3"
                android:layout_marginBottom="24dp"
                android:textColor="#757575"
                android:textSize="14dp"
                />
        </LinearLayout>

    </ScrollView>
</FrameLayout>
